Checkpoint before assistant change: Fixes a problem with joining strings
Added a new string joiner class (`JsStringJoiner`) and updated `JoshJsSimFacade` to use it for wasm compatibility, along with adding tests.  Fixed a potential index out of bounds error in `JoshJsSimFacade`.

Replit-Commit-Author: Assistant